--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
-.classpath
-.project
-**/target
-target
-target-ide
 *.class
 *.swp
+**/target
+bin/
+dist
+**/logs
+products
+repository
+workspace
+*~
+target
+target-ide
+.classpath
+.project
+.settings
+MANIFEST.MF
+*.ipr
+*.iml
+*.iws
+.idea
+xtend-gen
+yang-gen-config
+yang-gen-sal
+classes
+out/
+.externalToolBuilders
+maven-eclipse.xml
+.DS_STORE
+.metadata
+*.swp
+**/*.swp
+**/*.checkstyle
+**/*.swo
+**/yang-gen-*
