--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,9 +12,50 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jackson.version>2.6.0</jackson.version>
   </properties>
 
   <dependencies>
+  		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.java-ipv6</groupId>
+			<artifactId>java-ipv6</artifactId>
+			<version>0.16</version>
+		</dependency>
+    <dependency>
+      <groupId>com.wx.shs</groupId>
+      <artifactId>schedule</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -27,9 +68,16 @@
         <version>2.0.4</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.mina</groupId>
-        <artifactId>mina-filter-compression</artifactId>
-        <version>2.0.4</version>
+      <groupId>org.apache.mina</groupId>
+      <artifactId>mina-filter-compression</artifactId>
+      <version>2.0.4</version>
+      <type>jar</type>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.mina</groupId>
+          <artifactId>mina-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
@@ -42,16 +90,4 @@
         <version>1.3.0</version>
     </dependency>
   </dependencies>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-	<plugin>
-          <groupId>org.apache.felix</groupId>  
-      	  <artifactId>maven-bundle-plugin</artifactId>  
-      	  <extensions>true</extensions>
-    	</plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 </project>
